--- a/src/client/package.json
+++ b/src/client/package.json
@@ -4,8 +4,15 @@
   "private": true,
   "dependencies": {
     "custom-react-scripts": "0.0.23",
+    "isomorphic-fetch": "^2.2.1",
+    "material-ui": "^0.18.7",
+    "mobx": "^3.2.2",
+    "mobx-react": "^4.2.2",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-router-dom": "^4.1.2",
+    "react-tap-event-plugin": "^2.0.1",
+    "validator": "^8.0.0"
   },
   "devDependencies": {},
   "scripts": {
